Apis deletes
