# storage/api-docs/api-docs.json
@@ -646,14 +646,14 @@
                 ]
             }
         },
-        "/api/v1/user/like_imageproduct{user_id}/{img_id}": {
+        "/api/v1/user/like_imageproduct/{user_id}/{img_id}": {
             "post": {
                 "tags": [
                     "Likes"
                 ],
                 "summary": "Crea like que un usuario de a las imagenes",
                 "description": "Crea like que un usuario de a las imagenes",
-                "operationId": "207f42007929ffb506ded67c5be6b4a9",
+                "operationId": "d0a5a808c2248b4f99edeb9d6346d1e1",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -723,16 +723,14 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/v1/user/like_imageproduct/{user_id}/{lang_id}": {
-            "get": {
+            },
+            "delete": {
                 "tags": [
                     "Likes"
                 ],
-                "summary": "Devuelve todos los likes realizados por un usuario",
-                "description": "Retorna un Json con todos los likes  realizados por un usuario a las imagenes filtrandolo por el idioma",
-                "operationId": "03874c2ac21184f5383175b28e83c468",
+                "summary": "Elimina un like dado por un usuairo",
+                "description": "Elimina un like dado por un usuairo a una imagen",
+                "operationId": "1f3233e46c22cf61006e3287d7c6814c",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -745,9 +743,9 @@
                         }
                     },
                     {
-                        "name": "lang_id",
+                        "name": "img_id",
                         "in": "path",
-                        "description": "Id del lenguaje",
+                        "description": "Id de la imagen a la que desea eliminarle el like",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -784,7 +782,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "No esxite like"
+                                            "example": "Like eliminado"
                                         },
                                         "errors": {
                                             "type": "string",
@@ -804,14 +802,14 @@
                 ]
             }
         },
-        "/api/v1/user/like_imageproducty": {
-            "delete": {
+        "/api/v1/user/like_imageproduct/{user_id}/{lang_id}": {
+            "get": {
                 "tags": [
                     "Likes"
                 ],
-                "summary": "Elimina un like dado por un usuairo",
-                "description": "Elimina un like dado por un usuairo a una imagen",
-                "operationId": "d40842b24cc2511783947349c359f0a8",
+                "summary": "Devuelve todos los likes realizados por un usuario",
+                "description": "Retorna un Json con todos los likes  realizados por un usuario a las imagenes filtrandolo por el idioma",
+                "operationId": "03874c2ac21184f5383175b28e83c468",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -824,9 +822,9 @@
                         }
                     },
                     {
-                        "name": "category_id",
+                        "name": "lang_id",
                         "in": "path",
-                        "description": "Id de la imagen",
+                        "description": "Id del lenguaje",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -960,16 +958,14 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/v1/user/like_category": {
+            },
             "delete": {
                 "tags": [
                     "Likes"
                 ],
                 "summary": "Elimina un like dado por un usuario",
                 "description": "Elimina un like dado por un usuairo a una categoria",
-                "operationId": "1d5c7030a41143e467919d5d3a98f6f8",
+                "operationId": "4b2d85c028fa8cf1e8109dd5bb5ca3cd",
                 "parameters": [
                     {
                         "name": "user_id",
@@ -984,7 +980,7 @@
                     {
                         "name": "category_id",
                         "in": "path",
-                        "description": "Id de la categoria",
+                        "description": "Id de la categoria a la cual desea eliminar el like",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -1396,7 +1392,7 @@
                                     "properties": {
                                         "message": {
                                             "type": "string",
-                                            "example": "No esxite like"
+                                            "example": "No esxite este usuario"
                                         },
                                         "errors": {
                                             "type": "string",
